File: components/nexus-repository-content/src/main/java/org/sonatype/nexus/repository/content/utils/PreReleaseEvaluator.java